place monitor now wrtiting relations for contained places